# sj-trading

./: .gitignore  README.md  pyproject.toml
src/sj_trading/: __init__.py  accounting_list_profitloss.py  accounting_positions.py  accounting_profitloss.py  accounting_profitloss_detail.py  accounting_profitloss_list.py  accounting_profitloss_sum.py  ex_dividend_amt.py  login.py  market_data.py  order.py  test.py
