[project]
name = "sj-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Howard Huang", email = "blackhuang0121@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "shioaji>=1.2.6",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "oauth2client>=4.1.3",
    "gspread>=6.2.1",
]

# build
# uv pip install --editable .
# uv pip install -e .

# check modules' version
# pip freeze

[project.scripts]
hello = "sj_trading:hello"
account = "sj_trading:account"
version = "sj_trading:show_version"
usage = "sj_trading:usage"
login = "sj_trading.login:get_api"
order = "sj_trading.order:stock_ordering"
profitloss = "sj_trading.accounting_profitloss:profitloss"
list_profitloss = "sj_trading.accounting_list_profitloss:list_profitloss"
profitloss_sum = "sj_trading.accounting_profitloss_sum:profitloss_sum"
stock_contract = "sj_trading.market_data:get_stock_contract"
snapshots = "sj_trading.market_data:get_snapshots"
snapshots_df = "sj_trading.market_data:get_snapshots_df"
top_volume = "sj_trading.market_data:get_top_volume_stocks"
kbars = "sj_trading.market_data:get_stock_kbars"
multi_kbars = "sj_trading.market_data:get_multi_stock_kbars"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
